CI images update

--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-06 14:29:38
+lastsearch = 2024-08-06 15:23:44
 
 [shopee.vn]
-match = 21.4%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 14.3%%
+title = Chiếu Điều Hòa Lụa Tơ Tằm Nhập Khẩu Cao Cấp ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Tơ-Tằm-Nhập-Khẩu-Cao-Cấp-Chiếu-Có-Lót-Thông-Hơi-Mát-Lạnh-Mùa-Hè-i.294575973.17493425546
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -27,14 +27,14 @@ title = Sử dụng chiếu điều hòa có tốt hay không?
 url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOoqrgncW8sA7oya-zqZxW67b2Q6sYgiWgxNyMiRe653oDWiHwEz5
 
 [tiki.vn]
-match = 28.6%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = 10.7%%
+title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorn6aVmW53qfdGwI4Va-YveWl2b0i7jjGJElyhbYAHKkS3NogB7
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorTelq7V4hIrzSMLO4hgvP7dEWE_Allij9VNE3Cim8eufEPthLl
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoo5vfIeltrDwvqczGhKGc8vE--aHebWPLoR13zCv7es5ALjvq0t
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOorTO5BGwWi2W09dqi6u19bzmMeV7XT4oPLULuPddlLeyw7wDMA1
 
 [noithattana.vn]
 match = 21.4%%
