--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-06 13:45:01
+lastsearch = 2024-08-06 15:31:46
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -910,4 +910,9 @@ url = https://www.12news.com/
 match = -253.3%%
 title = ABC13 Houston news, weather and traffic - Latest Texas news ...
 url = https://abc13.com/
+
+[www.dmns.org]
+match = -206.7%%
+title = OFFICIAL Denver Museum of Nature & Science : Denver ...
+url = https://www.dmns.org/
 
