--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-06 14:19:32
+lastsearch = 2024-08-06 15:17:07
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOoobRwdjuL8mXYNKElHt95Zff1wloqNDTKRuIKFJlOK1TNMu8aCZ
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 43.8%%
-title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san?srsltid=AfmBOoqXJfVEWjng4GRft_-V2zdshKmKCY4cee73UEO0HhhW568lNO8u
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html?srsltid=AfmBOooYPe_ODBlYrS-6zBvjVQA__IsWy1qTY1uWohK-2B_fj9dOE21E
+url = https://demxanh.com/vo-goi.html
 
 [templeshalom.ca]
 match = 0.0%%
