--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-06 13:41:51
+lastsearch = 2024-08-06 15:26:31
 
 [www.diepxuan.com]
 match = 4.5%%
 title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html?srsltid=AfmBOoojNOXGa0i337ccZw7FeX-4G8i1NzzZ1RiLtvEJIXONI4yHEz3L
 
 [shopee.vn]
-match = 45.5%%
-title = Bộ ga gối Coco đủ các size
-url = https://shopee.vn/Bộ-ga-gối-Coco-đủ-các-size-i.1081989754.18186157367
+match = -68.2%%
+title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
+url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
 
 [m.facebook.com]
 match = -18.2%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -77.3%%
-title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
+match = 27.3%%
+title = Ga gối chun nỉ COCO KHÔNG VIỀN
+url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html?srsltid=AfmBOop6bQGOpSUniYTn-Qegj9vzrLqH-k-hnVSdkahPDFj4S754O7Yt
 
 [www.instagram.com]
 match = -100.0%%
@@ -42,19 +42,19 @@ title = SET GA GỐI TRẦN BÔNG SƠ ĐẬU NÀNH BỌC CHUN 28CM
 url = https://h5.lazada.vn/products/set-ga-goi-tran-bong-so-dau-nanh-boc-chun-28cm-i2270667932-s10970367704.html
 
 [www.sendo.vn]
-match = -72.7%%
-title = Bộ Ga Gối Cao Cấp Siêu Chất, Rẻ Nhất, Xu Hướng Mới Nhất
-url = https://www.sendo.vn/bo-ga-goi-cao-cap.htm
+match = -81.8%%
+title = Bộ 3 Món Chiếu Điều Hòa Cao Su Non CoCo Và 2 Vỏ Gối ...
+url = https://www.sendo.vn/bo-3-mon-chieu-dieu-hoa-cao-su-non-coco-va-2-vo-goi-mau-hong-la-bi-quyet-giua-long-mat-trong-ngay-he-116567630.html
 
 [demxanh.com]
-match = -45.5%%
-title = Chiếu cao su non Coco bo chun màu xanh mint
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
+match = -27.3%%
+title = Chiếu cao su non Coco bo chun màu hồng
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html?srsltid=AfmBOoq4S8OrwoxlG6WSLhjraXPrj3e7FnhLgbHjiOztwaSunpKoBdX4
 
 [www.tiktok.com]
-match = -109.1%%
-title = Sét ga gối nỉ nhung Coco 3 món gồm 1 ga chun và 2 vỏ gối nằm ...
-url = https://www.tiktok.com/@me.mai.trang/video/7311530198921465089
+match = -59.1%%
+title = Ga gối coco nằm điều hoà mát rễ chịu#coco #gagoi
+url = https://www.tiktok.com/@decor6223/video/7365936323837906177
 
 [thegioidemviet.vn]
 match = -122.7%%
