--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-06 11:43:03
+lastsearch = 2024-08-06 15:20:15
 
 [demxanh.com]
-match = 26.3%%
-title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html
+match = 26.1%%
+title = Chăn lông 3kg mã 02 - Hà Nội
+url = https://demxanh.com/chan-long-3kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -27,9 +27,9 @@ title = Chăn lông KQ cao cấp
 url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
-match = -100.0%%
-title = Bang Chan vibing to cool music while his computer kinda ...
-url = https://www.youtube.com/watch?v=rezmW8IDkRk
+match = -87.0%%
+title = Nấu Nồi Lẩu Mắm Đầu Năm Nhúng Bắp Chuối Hột Ăn Một ...
+url = https://www.youtube.com/watch?v=_urBtuvQ-kQ
 
 [phongkhongkhongquan.vn]
 match = -82.6%%
