--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-06 10:38:46
+lastsearch = 2024-08-06 15:17:49
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -43,8 +43,8 @@ url = https://vietjack.com/vat-ly-lop-12/tinh-chu-ki-tan-so-cua-con-lac-lo-xo.js
 
 [olm.vn]
 match = -187.5%%
-title = Một con lắc đơn có chiều dài 3 m được treo dưới gầm cầu ...
-url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-3-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-0.280805632788
+title = Một con lắc đơn có chiều dài l m được treo dưới gầm cầu ...
+url = https://olm.vn/cau-hoi/mot-con-lac-don-co-chieu-dai-l-m-duoc-treo-duoi-gam-cau-cach-mat-nuoc-12-m-con-lac-don-dao-dong-dieu-hoa-voi-bien-do-goc-a-o-01.321451557569
 
 [www.vietjack.com]
 match = -193.8%%
