--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-06 14:03:50
+lastsearch = 2024-08-06 15:27:16
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -318.2%%
-title = Giường & khung giường đơn tiêu chuẩn gần Eau Claire ...
-url = https://www.facebook.com/marketplace/103106229729097/full-size-beds/?locale=vi_VN
+match = -200.0%%
+title = Có bán Ga giường tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -409.1%%
-title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
+match = -145.5%%
+title = MN-G2CN - Giường 2 chức năng - Pamed
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
