--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-06 11:35:07
+lastsearch = 2024-08-06 15:19:13
 
 [www.tiktok.com]
 match = -11.8%%
@@ -137,9 +137,9 @@ title = Cách chỉnh màn hình máy tính chuẩn trên ...
 url = https://www.thegioididong.com/hoi-dap/cach-chinh-man-hinh-may-tinh-chuan-tren-may-tinh-windows-1314884
 
 [www.elleman.vn]
-match = -58.8%%
-title = hình ảnh đẹp - ELLE MAN việt nam (16)
-url = https://www.elleman.vn/van-hoa-giai-tri/hinh-anh-dep-lan-toa-nhat-2018/attachment/hinh-anh-dep-elle-man-viet-nam-16/
+match = -23.5%%
+title = van hoa dan gian - elle man (16)
+url = https://www.elleman.vn/van-hoa-giai-tri/bo-anh-dep-van-hoa-dan-gian-nhat/attachment/van-hoa-dan-gian-elle-man-16/
 
 [vnmedia.vn]
 match = -164.7%%
