--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-06 14:36:40
+lastsearch = 2024-08-06 15:45:18
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu điều hoà Muji lót lụa cao cấp hàng loại 1 ( không ...
-url = https://shopee.vn/Chiếu-điều-hoà-Muji-lót-lụa-cao-cấp-hàng-loại-1-(-không-kèm-vỏ-gối)-i.19058947.8867361209
+match = -40.7%%
+title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày cao ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-chiếu-điều-hòa-nhật-bản-loại-dày-cao-cấp-thông-minh-siêu-mát-và-siêu-thoáng-đủ-kích-thước-i.458989698.24414242012
 
 [demxanh.com]
 match = 14.8%%
