--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-06 12:56:52
+lastsearch = 2024-08-06 15:38:44
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -192,9 +192,9 @@ title = Giường Ghế Xếp Duy Lợi
 url = https://www.duyloi.com/vn/giuong-ghe.html
 
 [noithatviva.vn]
-match = -105.0%%
-title = Tham khảo bảng giá giường ngủ tân cổ điển chính xác và ...
-url = https://noithatviva.vn/tin-tuc/tham-khao-bang-gia-giuong-ngu-tan-co-dien-chinh-xac-va-moi-nhat.html?srsltid=AfmBOoopURyYGZLex1bh56690ynjK2aRhOvHKJcLgkVfak-T8IeRMJD0
+match = -85.0%%
+title = Top 15 Giường Ngủ Hình Ngôi Nhà Cho Bé Vừa Bền ...
+url = https://noithatviva.vn/tin-tuc/top-15-giuong-ngu-hinh-ngoi-nha-cho-be-vua-ben-vua-re-thinh-hanh-nhat.html
 
 [cafeland.vn]
 match = -120.0%%
