--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-06 13:57:57
+lastsearch = 2024-08-06 15:32:40
 
 [everon.online]
-match = 19.2%%
-title = Bộ chăn ga bốn mùa Everon EST21039
-url = https://everon.online/products/bo-chan-ga-bon-mua-everon-est21039
+match = 15.4%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [www.anbio.vn]
 match = 11.5%%
@@ -122,9 +122,9 @@ title = Vở ôly Hồng Hà 0555 48 trang - thế giới văn phòng phẩm
 url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 
 [everonvn.com.vn]
-match = -88.5%%
-title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOopOM2h9680mWuaAPvTc4b0RVqkMNcAuRL8HZArVMibAtkHxQoOE
+match = 3.8%%
+title = Bảng giá bán lẻ chăn bốn mùa Everon
+url = https://everonvn.com.vn/51/chan-bon-mua-everon
 
 [www.youtube.com]
 match = -69.2%%
@@ -202,9 +202,9 @@ title = Bộ ga chun chần bốn mùa Bestie EPM23068 160x200
 url = https://happynest.vn/shop/EBGCTBM1620EPM23068/bo-ga-chun-chan-bon-mua-bestie-epm23068-160x200.html
 
 [tiki.vn]
-match = -50.0%%
-title = hàng chính hãng, giao nhanh - Tháng 5, 2024 | Mua Ngay
-url = https://tiki.vn/search?q= 克拉根福大学出售degree,[微信:bestdiploma1]急速办理,r94ga8
+match = -34.6%%
+title = Bộ GA CHUN CHẦN bốn mùa ESM21011 160*200, 180* ...
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-esm21011-160-200-180-200-200-220-p180961652.html
 
 [everonthuduc.com]
 match = -46.2%%
@@ -420,4 +420,9 @@ url = https://thuvienhoasen.org/a41504/tieng-vong-song-bo-tran-kiem-doan
 match = -38.5%%
 title = Quy định về nhập khẩu thủy sản của thị trường EU
 url = https://nongnghiep.vn/tri-thuc-nong-dan/cap-nhat-moi-nhat-quy-dinh-ve-nhap-khau-thuy-san-cua-thi-truong-eu-d394956.html
+
+[elan.vn]
+match = 15.8%%
+title = Chăn bốn mùa - ELAN
+url = https://elan.vn/collections/chan-bon-mua
 
