--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 21.4%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOoqrgncW8sA7oya-zqZxW67b2Q6sYgiWgxNyMiRe653oDWiHwEz5
+match = 25.0%%
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [tiki.vn]
 match = 10.7%%
