--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-06 12:23:58
+lastsearch = 2024-08-06 15:43:14
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -52,9 +52,9 @@ title = 8 tiêm kích F-16 của Đài Loan bị hỏng do động đất
 url = https://vtcnews.vn/8-tiem-kich-f-16-cua-dai-loan-bi-hong-do-dong-dat-ar862782.html
 
 [trithucvn.co]
-match = -114.3%%
-title = Bộ Ngoại giao Mỹ và Đài Loan phản ứng về tuyên bố 'phí ...
-url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuyen-bo-phi-bao-ve-cua-ong-trump.html
+match = -133.3%%
+title = Đài Loan lên án vụ cổ động viên bị người Trung Quốc giật ...
+url = https://trithucvn.co/the-gioi/dai-loan-len-an-vu-co-dong-vien-bi-nguoi-trung-quoc-giat-ap-phich.html
 
 [antv.gov.vn]
 match = -123.8%%
