--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-06 10:35:37
+lastsearch = 2024-08-06 15:41:28
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
-match = -119.0%%
-title = [SIZE LỚN 1.8x2m] Chiếu điều hoà sợi mây chiếu ngủ văn ...
-url = https://www.lazada.vn/products/size-lon-18x2m-chieu-dieu-hoa-soi-may-chieu-ngu-van-phong-chat-lieu-soi-may-tong-hop-thoang-mat-chieu-ngu-van-phong-i1758917727.html
+match = -81.0%%
+title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
@@ -412,9 +412,9 @@ title = Khai trương trụ sở mới Phòng giao dịch Ea Kar của ...
 url = https://baodaklak.vn/kinh-te/tai-chinh-ngan-hang/202407/khai-truong-tru-so-moi-phong-giao-dich-ea-kar-cua-vietcombank-dak-lak-63215db/
 
 [www.facebook.com]
-match = -95.2%%
-title = Đài Phát Thanh. - Ủy viên Bộ Chính trị, Thường ...
-url = https://www.facebook.com/100044471918044/photos/1055354175956970/
+match = -52.4%%
+title = 3 CỰC HOT CHO ĐÔI TÌNH NHÂN <3 Chương ...
+url = https://www.facebook.com/photo.php?fbid=955228767979362&id=372534489582129&set=a.382649838570594&locale=pt_PT
 
 [haiquanonline.com.vn]
 match = -133.3%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = 0.0%%
-title = Sự phát triển của thai nhi tuần 4
-url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
+match = -123.8%%
+title = Điều gì có thể xảy ra trong và sau khi trẻ được chiếu đèn ...
+url = https://www.vinmec.com/vie/bai-viet/dieu-gi-co-xay-ra-trong-va-sau-khi-tre-duoc-chieu-den-dieu-tri-vang-da-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
