--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-06 12:21:56
+lastsearch = 2024-08-06 15:44:44
 
 [vnexpress.net]
 match = -128.6%%
@@ -197,9 +197,9 @@ title = Những địa điểm vui chơi, check in cực đẹp tại Vũng Tàu
 url = https://www.24h.com.vn/du-lich-24h/nhung-dia-diem-vui-choi-check-in-cuc-dep-tai-vung-tau-c76a1387112.html
 
 [baobariavungtau.com.vn]
-match = -95.2%%
-title = Mở tour khách lẻ tham quan Nông trại cuộc sống xanh
-url = https://baobariavungtau.com.vn/du-lich/201712/chi-nhanh-smiletour-ba-ria-mo-tour-khach-le-tham-quan-nong-trai-cuoc-song-xanh-773046/
+match = -81.0%%
+title = Những điểm vui chơi thả ga tại Vũng Tàu dịp lễ 30/4
+url = https://baobariavungtau.com.vn/du-lich/202404/nhung-diem-vui-choi-tha-ga-tai-vung-tau-dip-le-304-1008416/
 
 [mia.vn]
 match = -128.6%%
@@ -355,4 +355,9 @@ url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
 match = -114.3%%
 title = Hồ Tràm Vũng Tàu: kinh nghiệm du lịch chi tiết tháng 8/2024
 url = https://www.traveloka.com/vi-vn/explore/destination/ho-tram-vung-tau/143529
+
+[vungtau.baria-vungtau.gov.vn]
+match = -119.0%%
+title = Navigation - Cổng thông tin điện tử - Bà Rịa - Vũng Tàu
+url = https://vungtau.baria-vungtau.gov.vn/thong-bao/-/view-content/545528/du-kien-tuan-le-du-lich-tinh-ba-ria-vung-tau-dien-ra-tu-17-en-ngay-19-11-2023
 
