CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-06 14:34:33
+lastsearch = 2024-08-06 16:18:24
 
 [shopee.vn]
 match = 35.3%%
@@ -125,4 +125,9 @@ url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa
 match = -5.9%%
 title = Review chiếu điều hòa cao su non và vài món mua trên Sốp ...
 url = https://www.youtube.com/watch?v=1UjrRLNjJ7o
+
+[www.tiktok.com]
+match = -20.6%%
+title = Từ giờ mình chính thức sợ chiếu điều hoà cao su non nha ...
+url = https://www.tiktok.com/@luongchiuu/video/7360658604606622983
 
