--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-06 15:28:39
+lastsearch = 2024-08-06 16:22:31
 
 [www.galottery.com]
 match = -7.7%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -161.5%%
-title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx0G3_EY&sig=ACfU3U39cu84A17ClyDXXKdXK_AvZ60l3Q&hl=en&sa=X&ved=2ahUKEwjnhJmB2t6HAxUfFlkFHTRZMWQQ6AF6BAgZEAM
+match = -7.7%%
+title = Chipewyan Texts
+url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQptHOAmAH&sig=ACfU3U3FEzcqtQj0aeXs-5844bMqv3iA6Q&hl=en&sa=X&ved=2ahUKEwiy1rGqheCHAxViC3kGHRmXELUQ6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
