--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-06 10:01:28
+lastsearch = 2024-08-06 16:23:55
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamvinhthuan.com]
-match = 16.7%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 0.0%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [trieuchau.com]
 match = -5.6%%
