--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-06 10:45:59
+lastsearch = 2024-08-06 16:30:36
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Translational strategies for neuroprotection in ischemic stroke
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0ucq28He&sig=ACfU3U3Q1g_f43eSxUyAO0PyzvUUh_ziOg&hl=en&sa=X&ved=2ahUKEwiIzZ6Out-HAxVUlYkEHTcGII0Q6AF6BAgYEAM
+match = -223.5%%
+title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiVZIrI_F&sig=ACfU3U0nvMcpj_BJLTahptqFlQ8aJS3PjQ&hl=en&sa=X&ved=2ahUKEwidw9WRh-CHAxXGSjABHWj0Mq4Q6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
