--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-06 15:24:05
+lastsearch = 2024-08-06 16:19:28
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -97,9 +97,9 @@ title = Chuyện về làng chiếu Cẩm Nê - Năng lượng Quốc tế
 url = https://nangluongquocte.petrotimes.vn/chuyen-ve-lang-chieu-cam-ne-712698.html
 
 [baomoi.com]
-match = -60.7%%
-title = Nâng cao kỹ năng tuyên truyền, phổ biến chống rác thải ...
-url = https://baomoi.com/nang-cao-ky-nang-tuyen-truyen-pho-bien-chong-rac-thai-nhua-c49725888.epi
+match = -50.0%%
+title = VITA hành động mạnh mẽ, tiến đến mục tiêu du lịch không ...
+url = https://baomoi.com/vita-hanh-dong-manh-me-tien-den-muc-tieu-du-lich-khong-rac-thai-nhua-o-viet-nam-c49830250.epi
 
 [baodautu.vn]
 match = -57.1%%
