--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-06 14:02:49
+lastsearch = 2024-08-06 16:29:08
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -7.7%%
-title = David Cohn - Subtext
-url = https://www.linkedin.com/in/davidjcohn
+match = -230.8%%
+title = Joanne Chun - University of California, San Francisco
+url = https://www.linkedin.com/in/joanne-k-chun
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -246.2%%
-title = Expert Profile: James Herman - UC Research Directory
-url = https://researchdirectory.uc.edu/p/hermanjs
+match = -315.4%%
+title = Fawen Zhang - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/zhangfe
 
 [thegioinem.com]
 match = -230.8%%
