--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-06 13:40:26
+lastsearch = 2024-08-06 16:19:47
 
 [www.lazada.vn]
-match = -94.4%%
-title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -44.4%%
+title = Nem Cao Su Non Day Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/nem-cao-su-non-day/?srsltid=AfmBOoroSISW22I-rpVdK49Z4QRIHF20EdE8XkZm4oYAodmcmRQI7DIh
 
 [m.facebook.com]
 match = -161.1%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -122.2%%
-title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
-url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
+match = -116.7%%
+title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = -133.3%%
+title = Siêu Thị Nệm - Nệm gấp 3 cao su tổng hợp Thái Lan ...
+url = https://www.facebook.com/sieuthinem/posts/nệm-gấp-3-cao-su-tổng-hợp-thái-lan-khuyến-mãi-giảm-giá-đặc-biệt-tại-wwwnemvn1giả/2342249222605666/
 
 [voz.vn]
 match = 11.1%%
