--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-06 14:45:59
+lastsearch = 2024-08-06 16:20:06
 
 [www.diepxuan.com]
-match = 5.9%%
-title = Điệp Xuân Ruột gối kê Korea 45x65
+match = -5.9%%
+title = Ruột gối kê Korea 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 
 [entershopping.vn]
@@ -17,9 +17,9 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 5.9%%
-title = Ruột gối Microfiber Korea Virgin
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
+match = 47.1%%
+title = Ruột gối trang trí
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-98.html
 
 [shopee.vn]
 match = 64.7%%
