--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-06 07:57:55
+lastsearch = 2024-08-06 16:26:41
 
 [www.amazon.com]
 match = -309.1%%
@@ -28,7 +28,7 @@ url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
 match = -272.7%%
-title = SG350B | Ghế da trưởng phòng - Nội thất Hòa Phát
+title = SG350B | Ghế da trưởng phòng - Nội Thất Hòa Phát
 url = https://noithathoaphat.com/ghe-da-truong-phong-sg350b
 
 [dandoxe.com]
