--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-08-06 15:33:20
+lastsearch = 2024-08-06 16:15:00
 
 [www.diepxuan.com]
-match = 42.9%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+match = -19.0%%
+title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [tiki.vn]
 match = -81.0%%
