--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-06 14:02:08
+lastsearch = 2024-08-06 16:25:59
 
 [ninhouse.vn]
 match = -146.2%%
@@ -180,4 +180,9 @@ url = https://aeoneshop.com/products/category/137/goi---vo-goi
 match = -100.0%%
 title = 15+ Mẫu Vỏ gối thêu tay đẹp - Hà Nội
 url = https://tanmydesign.com/vo-goi/
+
+[demxanh.com]
+match = -253.8%%
+title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
+url = https://demxanh.com/vo-goi.html
 
