CI images update

--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-06 10:54:26
+lastsearch = 2024-08-06 16:42:46
 
 [everon.online]
-match = -7.4%%
-title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
-url = https://everon.online/products/bo-everon-sr01
+match = -55.6%%
+title = Top 4 Bộ Chăn Ga Gối Everon Màu Trắng Đẹp Nhất Năm ...
+url = https://everon.online/blogs/news/top-4-bo-chan-ga-goi-everon-mau-trang-dep-nhat-nam-2021
 
 [everonvn.com.vn]
 match = -66.7%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21070
 url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21060
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPT-21045
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
 
 [shopee.vn]
 match = -74.1%%
