--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-06 12:55:14
+lastsearch = 2024-08-06 16:44:06
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -17,9 +17,9 @@ title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
 url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
 
 [www.instagram.com]
-match = 11.5%%
-title = Khánh Linh (@t_khanh_linh)
-url = https://www.instagram.com/t_khanh_linh/?hl=en
+match = -10.7%%
+title = Minh Beta (@minhbeta) • Фото и видео в ...
+url = https://www.instagram.com/minhbeta/?locale=ru&hl=am-et
 
 [ninhbinhstone.com]
 match = -25.0%%
@@ -280,4 +280,9 @@ url = https://quangminhhung.com/tin-tuc/cay-chong-chat-luong-cao-nhap-khau-tu-da
 match = -21.4%%
 title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
+
+[vi.made-in-china.com]
+match = -39.3%%
+title = Đảo Đài Loan hệ số phay trên máy quay 63 Trục quay
+url = https://vi.made-in-china.com/co_kexindg/product_Taiwan-Taliang-Routing-Milling-Machine-Sc63-Spindle-Collet_ruooenong.html
 
