--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-06 14:33:31
+lastsearch = 2024-08-06 16:35:27
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -195,4 +195,14 @@ url = https://vacpa.org.vn/
 match = -28.6%%
 title = Lịch phát sóng
 url = https://antv.gov.vn/truyen-hinh-truc-tuyen.html
+
+[thhp.vn]
+match = -25.0%%
+title = Đài Phát thanh và Truyền hình Hải Phòng
+url = https://thhp.vn/
+
+[www.customs.gov.vn]
+match = -11.8%%
+title = Tổng cục Hải quan
+url = https://www.customs.gov.vn/
 
