--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-06 15:27:16
+lastsearch = 2024-08-06 16:35:06
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -200.0%%
-title = Có bán Ga giường tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -117,9 +117,9 @@ title = Wgm yura legendado [OZVilB]
 url = https://www.nitrc.org/links/?group_id=51&url=https://detsad147vrn.ru/27146399zfe43a
 
 [www.airbnb.com.vn]
-match = -309.1%%
-title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
-url = https://www.airbnb.com.vn/rooms/929459059736966278
+match = -272.7%%
+title = 2 giường đôi 2 phòng Suite tại Bloomington - Airbnb
+url = https://www.airbnb.com.vn/rooms/1131176938954548190
 
 [vn.trip.com]
 match = -281.8%%
@@ -215,4 +215,14 @@ url = https://thietbiyteminhhung.vn/products/giuong-y-te-son-tinh-dien-2-tay-qua
 match = -263.6%%
 title = World's Best Donuts || Grand Marais, Minnesota
 url = https://worldsbestdonutsmn.com/
+
+[www.agoda.com]
+match = -263.6%%
+title = Country Inn & Suites by Radisson, Woodbury, MN
+url = https://www.agoda.com/vi-vn/country-inn-suites-by-radisson-woodbury-mn/hotel/woodbury-mn-us.html
+
+[www.kw.com]
+match = -136.4%%
+title = 3 giường, 2 phòng tắm, Single Family
+url = https://www.kw.com/vi/property/lakeville-mn-55044/29001751
 
