--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-06 11:44:44
+lastsearch = 2024-08-06 16:31:46
 
 [www.gov.uk]
 match = 0.0%%
@@ -1195,4 +1195,9 @@ url = https://www.indypl.org/
 match = -246.7%%
 title = Seattle's Leading Local News: Weather, Traffic, Sports and ...
 url = https://www.king5.com/
+
+[www.kare11.com]
+match = -200.0%%
+title = Minneapolis St. Paul News, Weather, Traffic, Sports ...
+url = https://www.kare11.com/
 
