--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-06 11:21:22
+lastsearch = 2024-08-06 16:33:26
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -285.7%%
+title = BOVET 1822. Behind the Scenes with Pascal & Keith. 95%% in ...
+url = https://www.youtube.com/watch?v=T1H4IQneHZE
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = -242.9%%
-title = Love and Deepspace Global Official Group | Hey, can u ...
-url = https://www.facebook.com/groups/loveanddeepspaceofficial/posts/hey-can-u-guys-help-me-choose-1-of-the-2-i-want-a-little-twinsister-that-looks-a/937597518087418/
+match = -207.1%%
+title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và ...
+url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [mail.google.com]
 match = -14.3%%
@@ -312,9 +312,9 @@ title = Tổng hợp thông tin iPhone 16: Khi nào ra mắt và giá bao ...
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/tong-hop-thong-tin-iphone-16-khi-nao-ra-mat-gia-ban-bao-nhieu
 
 [www.tripadvisor.com]
-match = -221.4%%
-title = Noisy hotel! - Review of Dong Xanh Hotel, Chau Doc ...
-url = https://www.tripadvisor.com/ShowUserReviews-g311303-d9794497-r549078009-Dong_Xanh_Hotel-Chau_Doc_An_Giang_Province.html
+match = -242.9%%
+title = SÔNG BIÉN XANH, Hoi An - Restaurant Reviews, Photos & ...
+url = https://www.tripadvisor.com/Restaurant_Review-g298082-d25271727-Reviews-Song_Bien_Xanh-Hoi_An_Quang_Nam_Province.html
 
 [www.beyondblue.org.au]
 match = -257.1%%
@@ -400,4 +400,9 @@ url = https://www.wego.vn/lich-bay/grb/man/chuyen-bay-re-nhat-tu-green-bay-den-m
 match = -35.7%%
 title = Premera Blue Cross: Home
 url = https://www.premera.com/
+
+[www.yelp.com]
+match = -128.6%%
+title = LA XANH RESTAURANT - Updated August 2024
+url = https://www.yelp.com/biz/la-xanh-restaurant-garland-2
 
