--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 17.1%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOopuLJXDIKfOBuf1FuQh9P7pj7QP4jaEhTDa34wDM6FaCE-G4Cpr
 
 [fefurniture.com.vn]
 match = 31.4%%
@@ -34,7 +34,7 @@ url = https://www.sieuthinem.com/ct-san-pham/30/nem-lien-a-nem-cao-su-lien-a-khu
 [demxanh.com]
 match = 5.7%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOor5HxnsGc88nFX1fenIE-6siw3Nvb6upSlWeuZ1CDaPHsIkfwbM
 
 [www.thegioinemvip.com]
 match = -8.6%%
