--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -93,7 +93,7 @@ url = https://www.amazon.com/ask/questions/asin/B00IGBDXEA
 
 [demxanh.com]
 match = -110.0%%
-title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
+title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất 2024
 url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [thegioinem.com]
