--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-06 15:44:38
+lastsearch = 2024-08-06 16:32:26
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -133,7 +133,7 @@ url = https://www.sieuthinem.vn/nem-cao-su-5-zone-aloe-kim-cuong.html
 
 [0869125101.taphoa.so]
 match = -81.8%%
-title = Ga - Gối - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
+title = Chăn - Ga - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
 url = https://0869125101.taphoa.so/products/tham-trai-giuong-180x200-E4b8FaEqXyei7JaD9JrXQk
 
 [m.thitruongsi.com]
