--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-06 16:23:16
+lastsearch = 2024-08-06 17:01:53
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://songhong.info/chan-ga-goi-uc018
 
 [cuahangchangagoidem.com]
-match = -10.7%%
-title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Đẹp, Ý Nghĩa 2023
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
+match = -7.1%%
+title = 3 Bộ Chăn Ga Gối Đệm Màu Xám Sang Trọng Với Giá Tốt☑️
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-xam/
 
 [goni.vn]
 match = 7.1%%
