--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-06 12:38:39
+lastsearch = 2024-08-06 16:51:47
 
 [tiki.vn]
 match = -133.3%%
@@ -19,7 +19,7 @@ url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 [www.lazada.vn]
 match = -166.7%%
 title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/
+url = https://www.lazada.vn/tag/chan-long-cuu-2m/?srsltid=AfmBOopf1kxNtSiMQ92OUTC7vx8KzceNs2KTKWS15-yKV5s9qw47M9RP
 
 [tokyolife.vn]
 match = -193.3%%
@@ -94,7 +94,7 @@ url = https://www.dem365.vn/chan-long-cuu-gia-re/
 [demxanh.com]
 match = -73.3%%
 title = Chăn lông cừu Normal mã 12 Hoa kẻ ngang
-url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html
+url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html?srsltid=AfmBOorOg-tlXl9LWMZ1Cq3aG5EiwwSx1soTZN-cTJdbgJfCBZExkyiw
 
 [shope.io.vn]
 match = -186.7%%
@@ -159,7 +159,7 @@ url = https://audipet.com/cho-chan-cuu-duc.php
 [bibomart.com.vn]
 match = -86.7%%
 title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
-url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
+url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html?srsltid=AfmBOopqw6tErPy-ZvTzJBC8ZchInabdNbGtKMhpOLzWNKYgtZTHDiUO
 
 [www.sayweee.com]
 match = -100.0%%
