--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-06 05:30:34
+lastsearch = 2024-08-06 16:59:48
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -71.4%%
-title = Việc làm spa uy tín ✅ | 👉500k,600k700k....../1lít serum ...
-url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
+match = -17.9%%
+title = TUYỂN DỤNG KỸ THUẬT VIÊN SPA | QUẢNG NGÃI ...
+url = https://m.facebook.com/groups/1529017447196745/posts/7543439745754455/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -312,9 +312,9 @@ title = Ресницы на ленте Absolute Classic Collection 16 линий
 url = https://olash.ru/product/1мини-палетка-ресниц-o-lash-beauty-absolute-classic-6-линий-копи-3/
 
 [quizlet.com]
-match = -3.6%%
-title = Thẻ ghi nhớ: vàng da tăng bilirubin - sgk
-url = https://quizlet.com/vn/820708208/vang-da-tang-bilirubin-sgk-flash-cards/
+match = -5.0%%
+title = Thẻ ghi nhớ: Dược lí
+url = https://quizlet.com/vn/750439200/duoc-li-flash-cards/
 
 [baoquangninh.vn]
 match = 10.7%%
