--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-06 12:47:39
+lastsearch = 2024-08-06 16:57:20
 
 [hoa18.com]
-match = -63.2%%
-title = Mõm sói song hỷ(bó) - Hoa cắt cành - Hoa18
-url = https://hoa18.com/san-pham/hoa-cat-canh-hoa-mom-soi-song-hy-1-bo
+match = -87.5%%
+title = Sản phẩm
+url = https://hoa18.com/shop/page/8
 
 [www.youtube.com]
 match = -147.4%%
@@ -19,12 +19,12 @@ url = https://www.youtube.com/watch?v=NPdIFgtFTso
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOoq7duUD331On7WS_8qsvPgpacIApxLApJvklzDHJpY7UrtpRsWO
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = -52.6%%
-title = Lắp đặt tấm pin năng lượng mặt trời
-url = https://www.facebook.com/denledeurosuper/photos/-hướng-dẫn-cách-lắp-đèn-pha-led-năng-lượng-mặt-trời-đúng-chuẩn-️-đèn-pha-led-năn/720282063461086/
+match = -47.4%%
+title = Hoa18 Tuyển Dụng | Ho Chi Minh City
+url = https://www.facebook.com/hoa18tuyendung/
 
 [vietnambiz.vn]
 match = -94.7%%
@@ -133,8 +133,8 @@ url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam
 
 [shopee.vn]
 match = -121.1%%
-title = [Chỉ Giao HCM Ship Hỏa Tốc] Bó Hoa Cúc Tana Tươi( 1 Bó)
-url = https://shopee.vn/-Chỉ-Giao-HCM-Ship-Hỏa-Tốc-Bó-Hoa-Cúc-Tana-Tươi(-1-Bó)-Hoa-Tươi-Hoa18-i.52741467.16241410836
+title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/nhang/nở hoa
 
 [baobinhdinh.vn]
 match = -110.5%%
