--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-06 16:26:41
+lastsearch = 2024-08-06 16:54:53
 
 [www.amazon.com]
 match = -309.1%%
@@ -132,9 +132,9 @@ title = Ghế da văn phòng
 url = https://noithatthienminh.vn/ghe-da-van-phong/
 
 [akauto.com.vn]
-match = -372.7%%
-title = Bọc ghế da ô tô Kia Morning Cao Cấp - Mẫu mới đẹp - Giá tốt
-url = https://akauto.com.vn/boc-ghe-da-o-to-kia-morning
+match = -336.4%%
+title = Bọc nệm ghế da xe Fiesta HCM |Tăng thẩm mỹ - Trải nghiệm
+url = https://akauto.com.vn/boc-ghe-da-cho-fiesta
 
 [www.theguardian.com]
 match = -254.5%%
