CI images update

--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-06 15:37:43
+lastsearch = 2024-08-06 17:17:00
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -12,14 +12,14 @@ title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
 url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
-match = -76.2%%
-title = Chiếu trúc mắt nhỏ không viền màu trắng 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-160x190cm-14.html
+match = -71.4%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [nemsaithanh.com]
-match = 57.9%%
-title = Chiếu Trúc Các Loại
-url = https://nemsaithanh.com/chieu-truc-cac-loai/
+match = -10.0%%
+title = Chiếu Trúc
+url = https://nemsaithanh.com/chieu-truc-103.html
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -33,8 +33,8 @@ url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
 match = -76.2%%
-title = Chiếu trúc chiếu tre 120cm hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-120cm-hat-nau-den-hang-tot-loai-1/
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
@@ -115,4 +115,9 @@ url = https://www.youtube.com/watch?v=HfaucbE1OKk
 match = -61.9%%
 title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://www.yellowpages.vn/cls/490435/chieu-nam--chieu-tre-chieu-truc-chieu-coi,..-.html
+
+[lombom.com]
+match = -81.0%%
+title = Chiếu Hương Trúc - dòng chiếu hạt cao cấp - Lombomshop!
+url = https://lombom.com/chieu-huong-truc/
 
