--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-06 11:46:26
+lastsearch = 2024-08-06 17:20:12
 
 [vinatools.com]
-match = -140.0%%
-title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOooq-48yJTibh4rDmvjkfdE7kj-tb92VIdYh3T5I5G0XJaNCUG-T
+match = -206.7%%
+title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -186.7%%
+title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
+url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -182,9 +182,9 @@ title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
 url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
 
 [shopee.vn]
-match = -226.7%%
-title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
-url = https://shopee.vn/product/686340132/24951807725
+match = -240.0%%
+title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,12, ...
+url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
 
 [www.ministop.vn]
 match = -93.3%%
@@ -340,4 +340,9 @@ url = https://hcmc.vietnam.embassy.gov.au/files/hchi/list-of-hospitals-feb-2024.
 match = -233.3%%
 title = Công bố Quyết định phê duyệt Quy hoạch chi tiết xây dựng ...
 url = https://thudaumot.binhduong.gov.vn/chi-tiet?id=ART240700000115
+
+[vn.shtydamper.com]
+match = -213.3%%
+title = Bộ giảm chấn quay TRD-D2 cho cửa trượt, bản lề đóng ...
+url = http://vn.shtydamper.com/rotary-damper/gear-damper/trd-d2-rotary-damper-for-sliding-door-door.html
 
