--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-06 14:33:10
+lastsearch = 2024-08-06 17:25:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = -21.4%%
-title = TIN TRONG NƯỚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
+match = -30.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [shopee.vn]
 match = -43.5%%
@@ -510,4 +510,9 @@ url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
 match = -4.3%%
 title = Thành viên:Vuhoangsonhn/nháp
 url = https://vi.wikipedia.org/wiki/Thành_viên:Vuhoangsonhn/nháp
+
+[www.hcmcpv.org.vn]
+match = -47.8%%
+title = Quận 8: Trao quyết định cán bộ lãnh đạo cơ sở
+url = https://www.hcmcpv.org.vn/tin-tuc/quan-8-trao-quyet-dinh-can-bo-lanh-dao-co-so-1491925829
 
