--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-06 06:46:23
+lastsearch = 2024-08-06 17:25:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -38,8 +38,8 @@ url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [ipvietnam.gov.vn]
 match = -133.3%%
-title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trúc sào ...
-url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
+title = Bảo hộ Chỉ dẫn địa lý "Cao Bằng" cho sản phẩm trúc sào ...
+url = https://ipvietnam.gov.vn/cac-bai-viet-ve-chi-dan-ia-ly/-/asset_publisher/fNUbGw2ZxGKy/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-1
 
 [chieutrelanlan.com]
 match = -114.3%%
