--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-06 16:13:16
+lastsearch = 2024-08-06 17:14:16
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [thegioinem.com]
 match = -105.6%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/huuloc861/
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopCFcYsNavb5wRu_0HuVbIa4rWThURhRR1dPLkSVUDL1OQHtCwC
 
 [nemphuoclong.vn]
 match = -83.3%%
