--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-06 16:19:47
+lastsearch = 2024-08-06 17:18:42
 
 [www.lazada.vn]
-match = -44.4%%
-title = Nem Cao Su Non Day Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/nem-cao-su-non-day/?srsltid=AfmBOoroSISW22I-rpVdK49Z4QRIHF20EdE8XkZm4oYAodmcmRQI7DIh
+match = -94.4%%
+title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -161.1%%
@@ -27,9 +27,9 @@ title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
 url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
 match = -133.3%%
@@ -88,8 +88,8 @@ url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
 match = -138.9%%
-title = Buffet nem nướng 39k và nước mía khổng lồ 15k full ...
-url = https://www.tiktok.com/@50motbua/video/7367416773156539664
+title = 📍nem cuốn: 20 hoè nhai ⭐️: 10-17 cành. #AnCungTikTok ...
+url = https://www.tiktok.com/@longlongneee/video/7382911540548095240
 
 [vi.wikipedia.org]
 match = -27.8%%
@@ -235,4 +235,9 @@ url = https://www.sunrun.com/utility/ca/pge/how-read-your-pge-nem-bill
 match = 0.0%%
 title = 
 url = https://www.sce.com/residential/generating-your-own-power/net-energy-metering/Understanding-Your-Bill
+
+[cooking.nytimes.com]
+match = 0.0%%
+title = 
+url = https://cooking.nytimes.com/recipes/1019032-nem-nuong-vietnamese-sausage
 
