--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-08-06 15:44:57
+lastsearch = 2024-08-06 17:29:58
 
 [www.diepxuan.com]
 match = 26.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop0WsDOvFfC1wh73A-gsSaSLZWrLI9y8S3iN5B4m0kOP3_8Ng4I
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demkhangduy.com]
 match = -25.0%%
@@ -19,7 +19,7 @@ url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 [demxanh.com]
 match = -100.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html?srsltid=AfmBOorYThoDL5116XbNv6mY4t2wTm8NAaoqFg2fHw-Ha88H3aDb_rze
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
@@ -34,7 +34,7 @@ url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 [demviethome.vn]
 match = -140.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/?srsltid=AfmBOorWxJc9QnRCsJQadC_VoEvtqjCWLw6FweN2oeFcVWi76qU2_Hma
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/
 
 [bedding.vn]
 match = -25.0%%
