--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-06 16:44:49
+lastsearch = 2024-08-06 17:24:03
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = ADDITIONAL CASE INFORMATION
 url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Margaret Tempero, MD
+url = https://profiles.ucsf.edu/margaret.tempero
 
 [www.ncbi.nlm.nih.gov]
-match = -152.6%%
-title = SARS-CoV-2 detection, viral load and infectivity over ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7323671/
+match = -163.2%%
+title = A Comprehensive Review of Health Benefits of Qigong and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3085832/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -21.1%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -72,9 +72,9 @@ title = Politics, Policy, Political News - POLITICO
 url = https://www.politico.com/
 
 [som.cuanschutz.edu]
-match = -126.3%%
-title = Tell Bennett, MD Professor, Biomedical Informatics
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/22381
+match = -105.3%%
+title = Jeffrey Bennett, MD, PhD Professor, Neurology
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/3730
 
 [cpr.heart.org]
 match = -94.7%%
