CI images update

--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-06 16:29:08
+lastsearch = 2024-08-06 17:35:36
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -7.7%%
+title = David Cohn - Subtext
+url = https://www.linkedin.com/in/davidjcohn
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -430,4 +430,19 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10895848/
 match = -92.3%%
 title = Applied Statistics Symposium
 url = https://symposium2024.icsa.org/wp-content/uploads/2024/06/ICSA2024PB2_0.pdf
+
+[gladstone.org]
+match = -61.5%%
+title = Steve Finkbeiner, MD, PhD
+url = https://gladstone.org/people/steve-finkbeiner
+
+[www.engineering.pitt.edu]
+match = -207.7%%
+title = Anne Robertson - Swanson School of Engineering
+url = https://www.engineering.pitt.edu/people/faculty/anne-robertson/
+
+[bri.ucla.edu]
+match = -23.1%%
+title = Michael Irwin, M.D.
+url = https://bri.ucla.edu/people/michael-irwin/
 
