CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 15:29:02
+lastsearch = 2024-08-06 17:58:35
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -212,9 +212,9 @@ title = BẢN TIN THỜI SỰ NGÀY 3/8/2024
 url = https://dangcongsan.vn/video
 
 [soctrang.gov.vn]
-match = -218.8%%
-title = Danh sách người phát ngôn và cung cấp thông tin trên địa ...
-url = https://soctrang.gov.vn/mDefault.aspx?sname=ubnd-stg&sid=4&pageid=86&catid=54274&catname=Danh-sach-nguoi-phat-ngon-va-cung-cap-thong-tin-tren-dia-ban-tinh-Soc-Trang
+match = -200.0%%
+title = Họp chuẩn bị tổ chức giải Vô địch các Câu lạc bộ Cầu mây ...
+url = https://soctrang.gov.vn/mDefault.aspx?sname=svhttdl&sid=1294&pageid=2665&catid=64931&id=382425&catname=The-thao&title=Hop-chuan-bi-to-chuc-giai-Vo-dich-cac-Cau-lac-bo-Cau-may-quoc-gia-nam-2024
 
 [delhidentalcouncil.in]
 match = -75.0%%
@@ -222,9 +222,9 @@ title = xôi lạc 31 - luật bóng ném - V2.5.2
 url = https://delhidentalcouncil.in/iosyospqc/28617987/
 
 [stockbiz.vn]
-match = -68.8%%
-title = Xu thế dòng tiền: Bắt đáy được chưa?
-url = https://stockbiz.vn/tin-tuc/xu-the-dong-tien-bat-day-duoc-chua/27378153
+match = -181.2%%
+title = Giá vàng miếng trượt dốc, giảm sốc 1,3 triệu đồng/lượng
+url = https://stockbiz.vn/tin-tuc/gia-vang-chieu-nay-682024-gia-vang-mieng-truot-doc-giam-soc-13-trieu-dongluong/27437802
 
 [cafebiz.vn]
 match = -212.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -162.5%%
-title = Góc nhìn 02/08: Tín hiệu rung lắc đã được dự báo trước?
-url = https://vietstock.vn/2024/08/goc-nhin-0208-tin-hieu-rung-lac-da-duoc-du-bao-truoc-145-1215750.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 05/08: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0508-tam-ly-than-trong-bao-trum-thi-truong-585-1216444.htm
 
 [baohungyen.vn]
 match = -200.0%%
