--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-06 16:57:41
+lastsearch = 2024-08-06 17:48:14
 
 [www.tiktok.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = Hart's Annual Army List, Militia List, and Imperial Yeomanry ...
-url = https://books.google.com/books?id=-1g2fTZfZGYC&pg=PA49&lpg=PA49&dq=man+in+hoa+dep+16&source=bl&ots=fG2CZmcStg&sig=ACfU3U32wQ3UDt9cDFK68IEXb4O_vMBJlw&hl=en&sa=X&ved=2ahUKEwjTkMqYjeCHAxUoprAFHRG4AOEQ6AF6BAgcEAM
+match = -123.5%%
+title = The army list - Page 234 - Google Books Result
+url = https://books.google.com/books?id=tfANAAAAQAAJ&pg=RA2-PA234&lpg=RA2-PA234&dq=man+in+hoa+dep+16&source=bl&ots=vQE9hTwlVC&sig=ACfU3U3FlMRJnkriH4p_Uohq8DS1GaChVQ&hl=en&sa=X&ved=2ahUKEwiXstC-mOCHAxXSG9AFHUFaD80Q6AF6BAgcEAM
 
 [tax.vermont.gov]
 match = -29.4%%
