--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-06 16:29:52
+lastsearch = 2024-08-06 17:55:27
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -144.4%%
-title = Ăn vặt Vị Thanh - Hậu Giang | Nem nướng lụi siêu ngon
-url = https://www.facebook.com/groups/831435913920996/posts/nem-nướng-lụi-siêu-ngon110k500grcó-sẵn-nhé/2048288615569047/
+match = -5.6%%
+title = Nem Nướng Mỗ Lao - Hà Đông
+url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
 
 [thegioinem.com]
 match = -55.6%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -116.7%%
-title = NEM Fashion - NEM Fashion updated their cover photo.
-url = https://m.facebook.com/photo/?fbid=815333730629326&set=a.651941763635191
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
