--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-05 21:40:11
+lastsearch = 2024-08-06 17:55:51
 
 [shopee.vn]
-match = -51.9%%
-title = chăn nhung tuyết, chăn nhung loại dày size đại cao cấp ( 3kg
-url = https://shopee.vn/chăn-nhung-tuyết-chăn-nhung-loại-dày-size-đại-cao-cấp-(-3kg-4kg-5kg-)-i.442103984.12041087761
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
 match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [www.lazada.vn]
-match = -44.4%%
-title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/men-long-tuyet-thai/
+match = -48.1%%
+title = Chăn Nhung Mùa Đông Thành Công,Loại 2kg, 3kg, 4kg, 5kg
+url = https://www.lazada.vn/products/chan-nhung-long-tuyet-chan-nhung-mua-dong-thanh-congloai-2kg-3kg-4kg-5kg-i2043299346.html
 
 [tiki.vn]
-match = -3.7%%
-title = Chăn tuyết nhung hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn tuyết nhung
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [betuti.vn]
 match = 48.1%%
