--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-06 17:28:55
+lastsearch = 2024-08-06 17:52:02
 
 [shopee.vn]
 match = -214.3%%
@@ -102,9 +102,9 @@ title = Màn chụp tự bung Kiều Phi - Mùng, màn ngủ
 url = https://sieuthidienmaypico.com/ma-n-chu-p-tu-bung-kie-u-phi-mu-nsh8587689038.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Holy Bible (Mizo) | Johana 3:15-18
-url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
+match = -178.6%%
+title = Màn Chụp Tự Bung Hà Nội hotline 0963.325.228 | Hanoi
+url = https://www.facebook.com/ManTuBungDinhVuong/
 
 [www.churchofjesuschrist.org]
 match = -28.6%%
