--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-08-06 16:16:39
+lastsearch = 2024-08-06 18:00:44
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -22,9 +22,9 @@ title = Đệm bông ép Everon
 url = https://everon.online/products/dem-bong-ep-everon
 
 [elec-horeca.com]
-match = -40.0%%
-title = Đại lý phân phối nệm tại Đà Nẵng
-url = https://elec-horeca.com/nem-chinh-hang-d9.html
+match = 10.0%%
+title = Đại Lý Nệm Everon tại Đà Nẵng
+url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
 
 [tiki.vn]
 match = -20.0%%
@@ -79,7 +79,7 @@ url = https://everon.vip/nem?page=1&productdimensions=2033,347,2005,1999,1974,83
 [everonvietnam.com]
 match = -135.0%%
 title = cushion - mattress - | Everon - Korean Pillows & Blankets
-url = https://everonvietnam.com/en/dem-nem/page/2/
+url = https://everonvietnam.com/en/dem-nem/page/3/
 
 [thegioidemdep.com]
 match = -125.0%%
@@ -93,7 +93,7 @@ url = https://www.amazon.com/ask/questions/asin/B00IGBDXEA
 
 [demxanh.com]
 match = -110.0%%
-title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất 2024
+title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
 url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [thegioinem.com]
