--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -17,14 +17,14 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = 0.0%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoo8GKA8KDiyxAHxytFKpshHXY8pAf833r20LnJ98gUxDSHFNvoH
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOooEBa5X4ttitpnoRs5VHT-HbYYSzE01RIbF0q3SrR__Ct7ROjCj
 
 [everonminhkhai.com]
 match = -26.7%%
@@ -89,7 +89,7 @@ url = https://demolympia.com/dem-bon-mua-olympia/
 [diepxuan.com]
 match = -10.5%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOoqQ8Nv-Quu9OyTzdDaZoYCfXfZTML1lytFPbYx8tScZeES1Zajv
 
 [dem24h.vn]
 match = -25.0%%
