--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-06 16:16:01
+lastsearch = 2024-08-06 18:26:46
 
 [www.youtube.com]
 match = -52.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = -124.0%%
-title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
-url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
+match = 12.0%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [baotintuc.vn]
 match = -72.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOorZC5Q7S1iBBhyMMZl0kMlyW5C6XGSAZT-PmzYRYU3mnbRe6JWu
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
