CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-06 14:22:18
+lastsearch = 2024-08-06 19:23:23
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -92.0%%
-title = Đại doàn kết - Issues 9-29 - Page 29 - Google Books Result
-url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA9-PA29&lpg=RA9-PA29&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=fHS3SWPtnb&sig=ACfU3U3yby28ozVhY4G9GD8dyzCQ5SzeAQ&hl=en&sa=X&ved=2ahUKEwj1yJ_h09-HAxUnkIkEHXLPFKcQ6AF6BAgXEAM
+match = -96.0%%
+title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=jtZMIwtxHk&sig=ACfU3U1KnRtW5zuUm_AiyXlmqnBTV0D1cg&hl=en&sa=X&ved=2ahUKEwjMhoLhreCHAxXlHEQIHYBSGBEQ6AF6BAg7EAM
 
 [cellphones.com.vn]
 match = -52.0%%
