--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-06 17:31:21
+lastsearch = 2024-08-06 19:23:47
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,9 +22,9 @@ title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
 match = -28.6%%
@@ -42,14 +42,14 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = 35.7%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://songhong.info/chan-ga-goi-uc018
+match = 3.6%%
+title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
+url = https://songhong.info/chan-ga-goi-uc020
 
 [cuahangchangagoidem.com]
-match = -7.1%%
-title = 3 Bộ Chăn Ga Gối Đệm Màu Xám Sang Trọng Với Giá Tốt☑️
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-xam/
+match = -10.7%%
+title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Đẹp, Ý Nghĩa 2023
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
 
 [goni.vn]
 match = 7.1%%
@@ -62,9 +62,9 @@ title = Bedding
 url = https://ru9.vn/collections/bedding
 
 [quoccuongmattress.vn]
-match = -60.7%%
-title = Bộ chăn ga gối cotton 3D họa tiết hoạt hình dùng 2 mặt nhiều ...
-url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-hoat-hinh-dung-2-mat-nhieu-mau-da-dang/
+match = -57.1%%
+title = Bộ chăn ga gối cotton 3D họa tiết lông vũ dùng 2 mặt nhiều ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-long-vu-dung-2-mat-nhieu-mau-da-dang/
 
 [demxanh.com]
 match = -42.9%%
