--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-08-06 18:27:28
+lastsearch = 2024-08-06 19:25:32
 
 [www.diepxuan.com]
 match = 42.4%%
-title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
+title = Chiếu nhựa Hà Nội GT 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html
 
 [shopee.vn]
 match = 9.1%%
