CI images update

--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-06 17:54:05
+lastsearch = 2024-08-06 20:15:14
 
 [www.instagram.com]
-match = -123.1%%
-title = Chan Dior Sunshade (@chan_dior_sunshade)
-url = https://www.instagram.com/chan_dior_sunshade/
+match = -184.6%%
+title = The Hong Kong table tennis duo, Hoi Kem Doo ...
+url = https://www.instagram.com/prestigehk/p/C9-ObIzyMuI/?locale=en_US,en_GB,en_US,en_GB&hl=am-et
 
 [hk.linkedin.com]
-match = -215.4%%
-title = Vincy Chan - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/vincy-chan-982992221
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
@@ -32,9 +32,9 @@ title = Podcasts
 url = https://www.linklaters.com/en-us/knowledge/podcasts
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Lucie_Daouphars
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -30.8%%
-title = Dior official website
-url = https://www.dior.com/en_int/fashion
+match = -123.1%%
+title = The Lady 95.22 Bag - News & Défilés
+url = https://www.dior.com/en_us/fashion/news-fashion-shows/folder-news-and-events/95-22
 
 [www.gettyimages.fr]
 match = -253.8%%
