--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-06 17:22:41
+lastsearch = 2024-08-06 20:01:33
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 24.2%%
-title = Bộ chăn ga gối trẻ em SH_JC22 002
-url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
+match = 4.3%%
+title = Bộ sản phẩm SH_BC23 082
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = -10.5%%
-title = Bộ Chăn Ga Gối Eu08
-url = https://antbedding.com/bo-chan-ga-goi-eu08
+match = 23.5%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH02
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh02
 
 [shopee.vn]
 match = 50.0%%
@@ -67,9 +67,9 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = -5.9%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
-url = https://songhong.info/chan-ga-goi-khong-chan-bc62
+match = 2.9%%
+title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
+url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
 match = 41.2%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
