--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-06 14:24:24
+lastsearch = 2024-08-06 20:14:10
 
 [tiki.vn]
 match = -138.9%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -116.7%%
-title = Bộ Ga (Drap) Nệm Cotton Đặc Biệt Edena Mẫu 524
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Eu09
-url = https://antbedding.com/copy-of-bo-chan-ga-goi-eu08
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -137,9 +137,9 @@ title = FITIN
 url = https://www.facebook.com/fitin.vn/
 
 [www.diepxuan.com]
-match = 27.8%%
-title = Bộ phủ màu 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-phu-mau-180x200.html
+match = -38.9%%
+title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
 
 [dovihome.vn]
 match = 0.0%%
