--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-06 13:24:03
+lastsearch = 2024-08-06 20:15:36
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [leflair.com]
 match = 6.9%%
@@ -17,9 +17,9 @@ title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
 url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
-match = -31.0%%
-title = chiếu điều hòa mát lạnh chiếu cao su non 5D Chich Studio ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-chich-studio-mem-mai-thoang-matsize-160x200-180x200-220x200-i1975349002.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
@@ -52,9 +52,9 @@ title = Set chiếu điều hòa cao su Tencel - NANARA
 url = https://nanara.vn/p/set-chieu-dieu-hoa-cao-su-tencel/
 
 [foreverbedding.net]
-match = -37.9%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 17.2%%
+title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
 
 [www.diepxuan.com]
 match = 31.0%%
@@ -80,4 +80,9 @@ url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 match = -13.8%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+
+[khodem.vn]
+match = 55.2%%
+title = Chiếu điều hòa cao su non - Kho đệm
+url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
