--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-06 16:36:28
+lastsearch = 2024-08-06 20:07:52
 
 [demxanh.com]
 match = 34.6%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [tiki.vn]
 match = -7.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
 
 [foreverbedding.net]
-match = -53.8%%
-title = Giải Đáp Thắc Mắc Nên Mua Chiếu Điều Hòa Hay Chiếu Trúc?
-url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc
+match = 38.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -42,9 +42,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
-match = 42.3%%
-title = Chiếu Lụa điều Hòa Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/
+match = -46.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938102178.html
 
 [nanara.vn]
 match = 7.7%%
