--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-06 17:45:46
+lastsearch = 2024-08-06 20:00:48
 
 [www.lazada.vn]
 match = -94.4%%
@@ -12,9 +12,9 @@ title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
-match = -161.1%%
-title = Người Việt Bolsa/Orange County | 💥💥💥 Nem chua lá ổi Bình Định
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2885626441587720/
+match = -33.3%%
+title = Tòa B,C | 👍👍👍CÁC LOẠI NEM NHÀ EM
+url = https://m.facebook.com/groups/217909065634112/posts/1719971695427834/
 
 [www.instagram.com]
 match = -50.0%%
