--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-06 05:50:35
+lastsearch = 2024-08-06 19:58:21
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
-url = https://www.tui.co.uk/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
