--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-06 16:21:49
+lastsearch = 2024-08-06 20:11:42
 
 [everonvn.com.vn]
-match = -111.1%%
-title = Bảng Giá Vỏ Gối Hàn Quốc Everon Est-20034 Màu Tím
-url = https://everonvn.com.vn/everon/4749/vo-goi-everon-est-20034?srsltid=AfmBOop1VIsxvcX3QLO_6BDl3Mss7Hriw9E9JkcOZeyS1Px19iUhuvHw
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOop76tOUd9Upq0HWwKdxWytEHdcXICQS8kWv1MKGYxUmuKOPXlk-
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -32,14 +32,14 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -11.1%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html?srsltid=AfmBOoonAu135cP-5AT4Cv-NUxuqhF0gF9BqoKekpix_SVKBwh90yAUc
+match = 11.1%%
+title = Điệp Xuân Vỏ gối EP1818 45x65
+url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
-title = Vỏ gối EPM20064 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm20064-45x65.html
+title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
 
 [shopee.vn]
 match = -127.8%%
